kustomizations/apps/epp/import/import-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-import-controller
  namespace: epp
spec:
  replicas: ${import_controller_replicas:=1}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      containers:
      - name: epp-import-controller
        image: ghcr.io/elifesciences/enhanced-preprints-import-controller:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /ping
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
            ephemeral-storage: "100Mi"
          limits:
            memory: "800Mi"
