kustomizations/apps/epp/import/import-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epp-import-controller
  namespace: epp
spec:
  ports:
  - port: 5000
